<resources>
    <string name="app_name">Puzzles City Game</string>
    <string name="enjoy_playing_with_us_amp_develop_your_thinking">Enjoy Playing With Us And Develop Your Thinking</string>
    <string name="start_play">Start Play</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="reset">Reset</string>
    <string name="profile">Profile</string>
    <string name="sounds">Sounds</string>
    <string name="music">Music</string>
    <string name="notifications">Notifications</string>
    <string name="welcome_in_puzzles_city_n_please_enter_your_information">Welcome In Puzzles City\n Please enter your information…</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="birth_date">Birth Date</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="do_you_want_to_exit_puzzles_city_game">Do You Want To Exit Puzzles City Game ?</string>
    <string name="keep_progressing_in_stages">Keep Progressing In Stages</string>
    <string name="are_you_sure_to_delete_all_your_data_n_in_puzzles_city_game">Are You Sure To Delete All Your Data\n In Puzzles City Game ?</string>
    <string name="no">No</string>
    <string name="Yes">Yes</string>
    <string name="nothing_was_deleted">Nothing Was Deleted</string>
    <string name="your_data_has_been_saved_successfully">Your Data Has Been Saved Successfully</string>
    <string name="log_out_successfully">Log out Successfully</string>
    <string name="deleted_successfully">Deleted Successfully</string>
    <string name="Settings">Settings</string>
    <string name="please_enter_your_information">please enter your information</string>
    <string name="edit">Edit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="country">Country</string>
    <string name="personal_information">Personal Information</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="Entercontrey">Enter Country</string>

    <string name="Palestine">palestine</string>
    <string name="Egypt">Egypt</string>
    <string name="Qatar">Qatar</string>
    <string name="SaudiArabia">SaudiArabia</string>
    <string name="Algeria">Algeria</string>
    <string name="Kuwait">Kuwait</string>
    <string name="Lebanon">Lebanon</string>
    <string name="Morocco">Morocco</string>
    <string name="Sudan">Sudan</string>
    <string name="Syrian">Syria</string>
    <string name="Tunisia">Tunisia</string>
    <string name="Iraq">Iraq</string>
    <string name="Yemen">Yemen</string>
    <string name="Oman">Oman</string>
    <string name="Jordan">Jordan</string>
    <string name="the_answer_is_correct">the answer is correct</string>
    <string name="next">next</string>
    <string name="the_answer_is_wrong">the answer is wrong</string>
    <string name="Next">next</string>
    <string name="end_level">end Level</string>

</resources>
