<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/turquoise"
    tools:context=".activities.Edit_Profile">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:text="@string/please_enter_your_information"
        android:textColor="@color/white"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_input"
        android:hint="@string/user_name"
        android:drawableEnd="@drawable/user"
        android:layout_margin="@dimen/_30sdp"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:drawableEnd="@drawable/email"
        android:background="@drawable/custom_input"
        android:layout_margin="@dimen/_30sdp"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_username" />

    <EditText
        android:id="@+id/et_birthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/birth_date"
        android:drawableEnd="@drawable/birthdate"
        android:background="@drawable/custom_input"
        android:layout_margin="@dimen/_30sdp"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email" />

    <Spinner
        android:id="@+id/spinner_country"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:drawableEnd="@drawable/arrow_down"
        android:background="@drawable/custom_input"
        android:layout_margin="@dimen/_30sdp"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_birthdate"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="@dimen/_240sdp"
        android:layout_height="@dimen/_45sdp"
        android:padding="@dimen/_5sdp"
        android:layout_margin="@dimen/_30sdp"
        android:background="@drawable/custom_input"
        android:fontFamily="sans-serif"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_country">
        <RadioButton
            android:id="@+id/radiobutton_male"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_40sdp"
            android:drawableEnd="@drawable/male"
            android:paddingEnd="@dimen/_50sdp"
            android:text="@string/male"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"/>
        <RadioButton
            android:id="@+id/radiobutton_female"
            android:layout_width="@dimen/_135sdp"
            android:layout_height="@dimen/_40sdp"
            android:drawableEnd="@drawable/female"
            android:paddingEnd="@dimen/_40sdp"
            android:text="@string/female"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/button_shape"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:textSize="@dimen/_14ssp"
        android:layout_marginTop="@dimen/_50sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>