<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/turquoise"
    tools:context=".activities.Settings_Activity">


    <TextView
        android:id="@+id/Activity_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/Settings"
        android:textColor="@color/white"
        android:textSize="@dimen/_26ssp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape1"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:padding="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Activity_settings">


        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_sounds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:gravity="right"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:theme="@style/switch_theme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sounds"
            android:textColor="@color/black"
            android:textSize="@dimen/_17ssp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/switch_theme"
        android:checked="false"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch_sounds"/>

        <TextView
            android:id="@+id/tv_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music"
            android:textColor="@color/black"
            android:textSize="@dimen/_17ssp"
            android:textStyle="italic"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sound" />

        <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_22sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:theme="@style/switch_theme"
        android:checked="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch_music"/>

        <TextView
            android:id="@+id/tv_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notifications"
            android:textColor="@color/black"
            android:textSize="@dimen/_17ssp"
            android:textStyle="italic"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_music" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/button_shape"
        android:drawableEnd="@drawable/restart"
        android:gravity="left"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_80sdp"
        android:layout_marginEnd="@dimen/_80sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/reset"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_profile" />

    <Button
        android:id="@+id/btn_profile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/button_shape"
        android:drawableEnd="@drawable/arrow_forward"
        android:gravity="left"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraint" />

</androidx.constraintlayout.widget.ConstraintLayout>