<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/turquoise"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/logo_home"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:src="@drawable/puzzles"
        android:padding="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

  <Button
        android:id="@+id/btn_Start"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/start_play"
        android:gravity="center"
        android:background="@drawable/button_shape"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:padding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_50sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_home" />

    <Button
        android:id="@+id/btn_Settings"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/settings"
        android:gravity="center"
        android:background="@drawable/button_shape"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:padding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Start" />

    <Button
        android:id="@+id/btn_Exit"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/exit"
        android:gravity="center"
        android:background="@drawable/button_shape"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:padding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Settings" />

</androidx.constraintlayout.widget.ConstraintLayout>